# DataStructure_kakaoTalk

./: .gitignore  2015104167_DS_Project01.sln  CMakeLists.txt  README.md
2015104167_DS_Project01/: 2015104167_DS_Project01.vcxproj  2015104167_DS_Project01.vcxproj.filters  App.h  Client.h  Room.h  Server.h  TemplateLinkedList.h  User.h
Client/src/: CMakeLists.txt
Server/: CMakeLists.txt
Server/src/: MakePacket.cpp  MakePacket.h  Protocol.h  RingBuffer.cpp  RingBuffer.h  Select.cpp  Select.h  SerializationBuffer.cpp  SerializationBuffer.h  main.cpp  main.h
client/src/: 0917_homework_ChattingClient.rc  Main.cpp  Main.h  MakePacket.cpp  MakePacket.h  Protocol.h  RingBuffer.cpp  RingBuffer.h  SerializationBuffer.cpp  SerializationBuffer.h  WSAAsyncSelect.cpp  WSAAsyncSelect.h  resource.h  stdafx.h
doc/: 2017-2_DS_KakaoTalk.pptx
server/src/: Application.cpp  Application.h  Server.cpp  Server.h
src/: CMakeLists.txt
